[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridland"
version = "3.0.0"
description = "Professional security reconnaissance toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Security Research Team"}
]
keywords = ["security", "reconnaissance", "camera", "cctv", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "aiohttp>=3.8.0"
]

[project.urls]
Homepage = "https://github.com/gridland/gridland"
Documentation = "https://gridland.readthedocs.io/"
Repository = "https://github.com/gridland/gridland.git"
"Bug Reports" = "https://github.com/gridland/gridland/issues"

[project.scripts]
# This single line creates the 'gridland' command in the user's PATH
# and points it to your new main CLI router.
gridland = "gridland.cli.main:main"

[tool.setuptools]
packages = ["gridland"]

[tool.setuptools.package-dir]
gridland = "."

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991"
]